# MiniPhoto

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  filtermanager.cpp  filtermanager.hpp  image.cpp  image.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
src/filters/: CMakeLists.txt  blurfilter.cpp  blurfilter.hpp  brightnessfilter.cpp  brightnessfilter.hpp  grayscalefilter.cpp  grayscalefilter.hpp  ifilter.hpp
